# hg-ppc

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  ENVIRONMENT.md  README.md  VERIFICATION_REPORT.md  docker-compose.yml  package.json  pnpm-lock.yaml  project_status.md  rls_policies.sql  turbo.json
apps/web/: .env.local.example  Dockerfile  Dockerfile.worker  next.config.ts  package.json
apps/web/src/: instrumentation.ts  middleware.ts
apps/web/src/app/: layout.tsx  page.tsx
apps/web/src/components/: CampaignEditModal.tsx  CampaignTable.tsx  DateRangePicker.tsx  InsightsPanel.tsx  KPICard.tsx  LogoutButton.tsx  Sidebar.tsx  WorkspaceSelector.tsx
apps/web/src/contexts/: ToastContext.tsx  WorkspaceContext.tsx
apps/web/src/hooks/: useReporting.ts
apps/web/src/lib/: auth.ts  encryption.ts  redis.ts  workerHeartbeat.ts
apps/web/src/queues/: syncQueue.ts
apps/worker/: .env.example  Dockerfile  pyproject.toml  requirements.txt
apps/worker/app/: __init__.py  config.py  db.py  main.py
apps/worker/app/analytics/: __init__.py  anomaly_detection.py  budget_optimizer.py  forecasting.py  insights.py
apps/worker/app/crypto/: __init__.py  encryption.py
apps/worker/app/integrations/: __init__.py  base.py
apps/worker/app/integrations/google_ads/: __init__.py  client.py  mutations.py  sync.py
apps/worker/app/integrations/meta_ads/: __init__.py  client.py  mutations.py  sync.py
apps/worker/app/workers/: heartbeat.py  insights_worker.py  mutation_worker.py  sync_worker.py
docs/: architecture.md  google-ads-api.md  setup.md
(+39 files in other folders)
